add a temporary busy_img, displayed while loading. create audio element differently. add mechanism to throttle mouse drag seeks if track not fully loaded. place mouse cursor text above if touchscreen is detected. possibly better, now mostly separate handling of touch events.

--- a/css/playblack.css
+++ b/css/playblack.css
@@ -228,6 +228,9 @@ stylesheet for 'playblack' (sticky html5 audio player)
 	padding: 0;
 }
 
+.pb_status_busy {
+}
+
 .noselect {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
