--- a/css/playblack.css
+++ b/css/playblack.css
@@ -128,6 +128,8 @@ stylesheet for 'playblack' (sticky html5 audio player)
 .pb_button_image {
 	padding: 2px;
 	cursor: pointer;
+	-webkit-animation: fadeIn 0.1s;
+	animation: fadeIn 0.1s;
 }
 
 .pb_button_image:hover {
@@ -141,6 +143,9 @@ stylesheet for 'playblack' (sticky html5 audio player)
 }
 
 .pb_button_pause {
+}
+
+.pb_status_busy {
 }
 
 .pb_time {
@@ -228,9 +233,6 @@ stylesheet for 'playblack' (sticky html5 audio player)
 	padding: 0;
 }
 
-.pb_status_busy {
-}
-
 .noselect {
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -239,4 +241,14 @@ stylesheet for 'playblack' (sticky html5 audio player)
 	-ms-user-select: none;
 	user-select: none;
 }
+
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}  
+@keyframes fadeIn {
+    from { opacity: 0; }
+      to { opacity: 1; }
+}
+
 /*EOF*/
